--- a/html.html
+++ b/html.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Прогноз погоды</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css.css">
 </head>
 
 <body>
@@ -11,11 +11,11 @@
     <div class="tabs">
         <a href="/index/"> <span class="tab">Сегодня</span> </a>
         <a href="/5days/"><span class="tab">5 дней</span> </a>
-        <a href=""><span class="tab">История погоды</span> </a>
+        <a href="history"><span class="tab">История погоды</span> </a>
     </div>
 
          <div class="pollution_search">
-        <div> Загрязнение воздуха 8.168363052618588е-8</div>
+        <span> Загрязнение воздуха 8.168363052618588е-8</span>
               <form>
                 <input type="search" name="q" placeholder="Искать..."> 
                 <button type="submit">Поиск</button>
@@ -40,7 +40,7 @@
 
     <div class="box_2">
            <div>
-               <img src="img" alt="облачно"></br>
+               <img src="Cloud.png" alt="облачно"></br>
                 <span>22℃</span>
            </div>
 
@@ -72,7 +72,7 @@
 
             <div class="forecast">
                 <p>ср</p>
-                <img src="img" alt="облачно"></br>
+                <img src="Cloud.png" alt="облачно"></br>
                 <span>22° 13°</span>
             </div>
         </div>
@@ -83,7 +83,7 @@
 
             <div class="forecast">
                 <p>чт</p>
-                <img src="img" alt="небольшой дождь"></br>
+                <img src="rainy.png" alt="небольшой дождь"></br>
                 <span>21° 11°</span>
             </div>
         </div>
@@ -94,7 +94,7 @@
 
             <div class="forecast">
                 <p>пт</p>
-                <img src="img" alt="небольшая облачность"></br>
+                <img src="cloudy.png" alt="небольшая облачность"></br>
                 <span>24° 12°</span>
             </div>
         </div>
@@ -105,7 +105,7 @@
 
             <div class="forecast">
                 <p>сб</p>
-                <img src="img" alt="дождь"></br>
+                <img src="rain.png" alt="дождь"></br>
                 <span>26° 13°</span>
             </div>
         </div>
@@ -116,7 +116,7 @@
 
             <div class="forecast">
                 <p>вс</p>
-                <img src="img" alt="небольшая облачность"></br>
+                <img src="cloudy.png" alt="небольшая облачность"></br>
                 <span>27° 14°</span>
             </div>
         </div>
@@ -127,7 +127,7 @@
 
             <div class="forecast">
                 <p>пн</p>
-                <img src="img" alt="небольшая облачность"></br>
+                <img src="cloudy.png" alt="небольшая облачность"></br>
                 <span>28° 14°</span>
             </div>
         </div>
@@ -138,7 +138,7 @@
 
             <div class="forecast">
                 <p>вт</p>
-                <img src="" alt="дождь"></br>
+                <img src="rain.png" alt="дождь"></br>
                 <span>28° 14°</span>
             </div>
         </div>
@@ -149,7 +149,7 @@
 
             <div class="forecast">
                 <p>ср</p>
-                <img src="" alt="небольшая облачность"></br>
+                <img src="cloudy.png" alt="небольшая облачность"></br>
                 <span>28° 14°</span>
             </div>
         </div>
