--- a/history.html
+++ b/history.html
@@ -8,11 +8,11 @@
 
 <body>
 
-    <div class="tabs">
+    <nav class="tabs">
         <a href="html.html"> <span class="tab">Сегодня</span> </a>
         <a href="html5.html"><span class="tab">5 дней</span> </a>
         <a href="history.html"><span class="tab">История погоды</span> </a>
-    </div>
+    </nav>
     <header>
     
     	<div class='text'> Ижевск, Россия</div>
