--- a/html5.html
+++ b/html5.html
@@ -30,7 +30,7 @@
 			<td>Вт, 22 мая</td>
 		</tr>
 		<tr>
-			<td><img src="CloudyWeather.png"><img src="Sunny Weather.png"><img src="Weather_5.png"><img src="Weather_2.png"></td><td><img src="CloudyWeather.png"><img src="Sunny Weather.png"><img src="Weather_2.png"><img src="Weather_5.png"></td><td><img src="CloudyWeather.png"><img src="Weather_2.png"><img src="Weather_5.png"><img src="Sunny Weather.png"></td><td><img src="CloudyWeather.png"><img src="Sunny Weather.png"><img src="Weather_5.png"><img src="Weather_2.png"></td><td><img src="CloudyWeather.png"><img src="Sunny Weather.png"><img src="Weather_5.png"><img src="Weather_2.png"></td>
+			<td><img src="Cloudy Weather.png"><img src="Sunny Weather.png"><img src="Weather_5.png"><img src="Weather_2.png"></td><td><img src="Cloudy Weather.png"><img src="Sunny Weather.png"><img src="Weather_2.png"><img src="Weather_5.png"></td><td><img src="Cloudy Weather.png"><img src="Weather_2.png"><img src="Weather_5.png"><img src="Sunny Weather.png"></td><td><img src="Cloudy Weather.png"><img src="Sunny Weather.png"><img src="Weather_5.png"><img src="Weather_2.png"></td><td><img src="CloudyWeather.png"><img src="Sunny Weather.png"><img src="Weather_5.png"><img src="Weather_2.png"></td>
 		</tr>
 		<tr>
 			<td colspan="5">Максимальная скорость ветра,м\с</td>
@@ -45,9 +45,9 @@
 			<td>0 0 2.2 4.6</td><td>0 0 4.5 2.2</td><td>0 4.7 2.2 0</td><td>0 0 2.2 4.6</td><td>0 0 2.2 4.6</td>
 		</tr>
 	</table>
-	<section>Пятница, 18 мая, сегодня         Солнце и луна</section>
-	<div class="foo"><img src="Sun.png">Долгота дня - 16 ч 43 мин</br>Восход - 4:02</br>Заход - 20:45<img src="Moon.png" style="margin-left: 300px;">Луна растущая - 19%</br>Восход - 7:40</br>Заход - 10:58
-	</div>
+	<section class='day_call'>Пятница, 18 мая, сегодня<div class='text'>Солнце и луна</div></section>
+	<section class="foo"><div class='Sun'><img src="Sun.png"><div>Долгота дня - 16 ч 43 мин</div><div>Восход - 4:02</div><div>Заход - 20:45</div></div><div class='Moon'><img src="Moon.png"></div><div>Луна растущая - 19%</div><div>Восход - 7:40</div><div>Заход - 10:58</div>
+	</section>
 </main>
 <footer>
 	<center> 2018 © Copyright</center>
