--- a/html.html
+++ b/html.html
@@ -8,20 +8,20 @@
 
 <body>
 
-    <div class="tabs">
-        <a href="/index/"> <span class="tab">Сегодня</span> </a>
-        <a href="/5days/"><span class="tab">5 дней</span> </a>
-        <a href="history"><span class="tab">История погоды</span> </a>
-    </div>
-
+    <nav class="tabs">
+        <a href="html.html"> <span class="tab">Сегодня</span> </a>
+        <a href="html5.html"><span class="tab">5 дней</span> </a>
+        <a href="history.html"><span class="tab">История погоды</span> </a>
+    </nav>
+            <header>
          <div class="pollution_search">
-        <span> Загрязнение воздуха 8.168363052618588е-8</span>
+        <div class='pollution'> Загрязнение воздуха 8.168363052618588е-8</div>
               <form>
-                <input type="search" name="q" placeholder="Искать..."> 
-                <button type="submit">Поиск</button>
+                <input type="search" name="q" placeholder="   Поиск"> 
              </form>
         </div>
-
+            </header>
+    <main>
                 <div class="container">
 
                      <div class="box_1">
@@ -157,18 +157,10 @@
 
 
     </div>
-
-
-
-
-
-
-
-
-
-    <div id="footer">
+        </main>
+    <footer>
        <center> 2018 © Copyright</center>
-    </div>
+    </footer>
 
 </body>
 
