--- a/history.html
+++ b/history.html
@@ -9,16 +9,17 @@
 <body>
 
     <nav class="tabs">
-        <a href="html.html"> <span class="tab">Сегодня</span> </a>
-        <a href="html5.html"><span class="tab">5 дней</span> </a>
-        <a href="history.html"><span class="tab">История погоды</span> </a>
+        <a href="html.html"><span class="tab">Сегодня</span></a>
+        <a href="html5.html"><span class="tab">5 дней</span></a>
+        <a href="history.html"><span class="tab">История погоды</span></a>
     </nav>
     <header>
-    
-    	<div class='text'> Ижевск, Россия</div>
-    	<form>
+        <div class='input_tab'>
+            <div class='text'> Ижевск, Россия</div>
+                <div class='input'>
                 <input type="search" name="q" placeholder="Поиск"> 
-             </form>
+             </div>
+         </div>
     </header>
     <main>
         <table>
