--- a/html.html
+++ b/html.html
@@ -9,16 +9,16 @@
 <body>
 
     <nav class="tabs">
-        <a href="html.html"> <span class="tab">Сегодня</span> </a>
-        <a href="html5.html"><span class="tab">5 дней</span> </a>
-        <a href="history.html"><span class="tab">История погоды</span> </a>
+        <a href="html.html"><span class="tab">Сегодня</span></a>
+        <a href="html5.html"><span class="tab">5 дней</span></a>
+        <a href="history.html"><span class="tab">История погоды</span></a>
     </nav>
             <header>
          <div class="pollution_search">
         <div class='pollution'> Загрязнение воздуха 8.168363052618588е-8</div>
-              <form>
-                <input type="search" name="q" placeholder="   Поиск"> 
-             </form>
+              <div class='input'>
+                <input type="search" name="q" placeholder="Поиск"> 
+             </div>
         </div>
             </header>
     <main>
@@ -165,6 +165,7 @@
 </body>
 
 </html>
+
 
 
 
