--- a/html5.html
+++ b/html5.html
@@ -14,7 +14,7 @@
         <a href="history.html"><span class="tab">История погоды</span></a>
     </nav>
     <header>
-    	<img src="cloud.png" style='height: 30px; width: 40px;'>
+    	<img src="pics/cloud.png" style='height: 30px; width: 40px;'>
     	<div class='text'>34' Ижевск, Россия</div>
     	<form>
                 <input type="search" name="q" placeholder="Поиск"> 
@@ -23,36 +23,35 @@
 <main>
 	<div class='table inline-block'>
 		<div class='week_days_row '>
-			<div class='week_days inline-block'></div>
-			<div class='week_days inline-block'></div>
-			<div class='week_days inline-block'></div>
-			<div class='week_days inline-block'></div>
-			<div class='week_days inline-block'></div>
+			<div class='week_days inline-block'>Пт, 18 мая</div>
+			<div class='week_days inline-block'>Сб, 19 мая</div>
+			<div class='week_days inline-block'>Вс, 20 мая</div>
+			<div class='week_days inline-block'>Пн, 21 мая</div>
+			<div class='week_days inline-block'>Вт, 22 мая</div>
 		</div>
-		<div class='weather_days_row'>
-			<div class='weather_days'><img src="Cloudy Weather.png"><img src="Sunny Weather.png"><img src="Weather_5.png"><img src="Weather_2.png"></div>
-			<div class='weather_days'><img src="Cloudy Weather.png"><img src="Sunny Weather.png"><img src="Weather_2.png"><img src="Weather_5.png"></div>
-			<div class='weather_days'><img src="Cloudy Weather.png"><img src="Weather_2.png"><img src="Weather_5.png"><img src="Sunny Weather.png"></div>
-			<div class='weather_days'><img src="Cloudy Weather.png"><img src="Sunny Weather.png"><img src="Weather_5.png"><img src="Weather_2.png"></div>
-			<div class='weather_days'><img src="Cloudy Weather.png"><img src="Sunny Weather.png"><img src="Weather_5.png"><img src="Weather_2.png"></div>
+		<div class='weather_days_row inline-block'>
+			<div class='weather_days inline-block'><img src="pics/Cloudy Weather.png"><img src="pics/Sunny Weather.png"><img src="pics/Weather_5.png"><img src="pics/Weather_2.png"></div>
+			<div class='weather_days inline-block'><img src="pics/Cloudy Weather.png"><img src="pics/Sunny Weather.png"><img src="pics/Weather_2.png"><img src="pics/Weather_5.png"></div>
+			<div class='weather_days inline-block'><img src="pics/Cloudy Weather.png"><img src="pics/Weather_2.png"><img src="pics/Weather_5.png"><img src="pics/Sunny Weather.png"></div>
+			<div class='weather_days inline-block'><img src="pics/Cloudy Weather.png"><img src="pics/Sunny Weather.png"><img src="pics/Weather_5.png"><img src="pics/Weather_2.png"></div>
+			<div class='weather_days inline-block'><img src="pics/Cloudy Weather.png"><img src="pics/Sunny Weather.png"><img src="pics/Weather_5.png"><img src="pics/Weather_2.png"></div>
 		</div>
-		<div class='max_wind_speed'></div>
-		<div class='max_wind_speed_row'>
-			<div class='wind_info'></div>
-			<div class='wind_info'></div>
-			<div class='wind_info'></div>
-			<div class='wind_info'></div>
-			<div class='wind_info'></div>
+		<div class='max_wind_speed'>Максимальная скорость ветра, м/с</div>
+		<div class='max_wind_speed_row inline-block'>
+			<div class='wind_info inline-block'><div class='transform'>2</div><div class='transform'>5</div><div class='transform'>4</div><div class='transform'>5</div></div>
+			<div class='wind_info inline-block'><div class='transform'>2</div><div class='transform'>5</div><div class='transform'>4</div><div class='transform'>5</div></div>
+			<div class='wind_info inline-block'><div class='transform'>2</div><div class='transform'>5</div><div class='transform'>4</div><div class='transform'>5</div></div>
+			<div class='wind_info inline-block'><div class='transform'>2</div><div class='transform'>5</div><div class='transform'>4</div><div class='transform'>5</div></div>
+			<div class='wind_info inline-block'><div class='transform'>2</div><div class='transform'>5</div><div class='transform'>4</div><div class='transform'>5</div></div>
 		</div>
-		<div class='precipitation'></div>
+		<div class='precipitation'>Осадки, мм</div>
 			<div class='precipitation_info_row'>
-				<div class='precipitation_info'></div>
-				<div class='precipitation_info'></div>
-				<div class='precipitation_info'></div>
-				<div class='precipitation_info'></div>
-				<div class='precipitation_info'></div>
+				<div class='precipitation_info'><div class='precipitation_info_block'>0</div><div class='precipitation_info_block'>0</div><div class='precipitation_info_block'><img src='Group.png'></div><div class='precipitation_info_block'><img src='Group_2.png'></div></div>
+				<div class='precipitation_info'><div class='precipitation_info_block'>0</div><div class='precipitation_info_block'>0</div><div class='precipitation_info_block'><img src='Group_2.png'></div><div class='precipitation_info_block'><img src='Group.png'></div></div>
+				<div class='precipitation_info'><div class='precipitation_info_block'>0</div><div class='precipitation_info_block'><img src='Group_2.png'></div><div class='precipitation_info_block'><img src='Group.png'></div><div class='precipitation_info_block'>0</div></div>
+				<div class='precipitation_info'><div class='precipitation_info_block'>0</div><div class='precipitation_info_block'>0</div><div class='precipitation_info_block'><img src='Group.png'></div><div class='precipitation_info_block'><img src='Group_2.png'></div></div>
+				<div class='precipitation_info'><div class='precipitation_info_block'>0</div><div class='precipitation_info_block'>0</div><div class='precipitation_info_block'><img src='Group.png'></div><div class='precipitation_info_block'><img src='Group_2.png'></div></div>
 			</div>
-	</div>
 	</div>
 	<section class='day_call'>Пятница, 18 мая, сегодня<div class='text'>Солнце и луна</div></section>
 	<section class="foo"><div class='Sun'><img src="Sun.png"><div>Долгота дня - 16 ч 43 мин</div><div>Восход - 4:02</div><div>Заход - 20:45</div></div><div class='Moon'><img src="Moon.png"></div><div>Луна растущая - 19%</div><div>Восход - 7:40</div><div>Заход - 10:58</div>
@@ -61,5 +60,3 @@
 <footer>
 	<center> 2018 © Copyright</center>
 </footer>
-       
-    
