--- a/html5.html
+++ b/html5.html
@@ -14,11 +14,11 @@
         <a href="history.html"><span class="tab">История погоды</span></a>
     </nav>
     <header>
-    	<img src="pics/cloud.png" style='height: 30px; width: 40px;'>
+    	<img src="cloud.png" style='height: 30px; width: 40px;'>
     	<div class='text'>34' Ижевск, Россия</div>
-    	<form>
+    	<div class='input'>
                 <input type="search" name="q" placeholder="Поиск"> 
-             </form>
+             </div>
     </header>
 <main>
 	<div class='table inline-block'>
@@ -30,11 +30,11 @@
 			<div class='week_days inline-block'>Вт, 22 мая</div>
 		</div>
 		<div class='weather_days_row inline-block'>
-			<div class='weather_days inline-block'><img src="pics/Cloudy Weather.png"><img src="pics/Sunny Weather.png"><img src="pics/Weather_5.png"><img src="pics/Weather_2.png"></div>
-			<div class='weather_days inline-block'><img src="pics/Cloudy Weather.png"><img src="pics/Sunny Weather.png"><img src="pics/Weather_2.png"><img src="pics/Weather_5.png"></div>
-			<div class='weather_days inline-block'><img src="pics/Cloudy Weather.png"><img src="pics/Weather_2.png"><img src="pics/Weather_5.png"><img src="pics/Sunny Weather.png"></div>
-			<div class='weather_days inline-block'><img src="pics/Cloudy Weather.png"><img src="pics/Sunny Weather.png"><img src="pics/Weather_5.png"><img src="pics/Weather_2.png"></div>
-			<div class='weather_days inline-block'><img src="pics/Cloudy Weather.png"><img src="pics/Sunny Weather.png"><img src="pics/Weather_5.png"><img src="pics/Weather_2.png"></div>
+			<div class='weather_days inline-block'><img src="Cloudy Weather.png"><img src="Sunny Weather.png"><img src="Weather_5.png"><img src="Weather_2.png"></div>
+			<div class='weather_days inline-block'><img src="Cloudy Weather.png"><img src="Sunny Weather.png"><img src="Weather_2.png"><img src="Weather_5.png"></div>
+			<div class='weather_days inline-block'><img src="Cloudy Weather.png"><img src="Weather_2.png"><img src="Weather_5.png"><img src="Sunny Weather.png"></div>
+			<div class='weather_days inline-block'><img src="Cloudy Weather.png"><img src="Sunny Weather.png"><img src="Weather_5.png"><img src="Weather_2.png"></div>
+			<div class='weather_days inline-block'><img src="Cloudy Weather.png"><img src="Sunny Weather.png"><img src="Weather_5.png"><img src="Weather_2.png"></div>
 		</div>
 		<div class='max_wind_speed'>Максимальная скорость ветра, м/с</div>
 		<div class='max_wind_speed_row inline-block'>
@@ -60,3 +60,4 @@
 <footer>
 	<center> 2018 © Copyright</center>
 </footer>
+</body>
