--- a/history.html
+++ b/history.html
@@ -40,6 +40,7 @@
             </tr>
         </table>
     </main>
-    <footer><center> 2018 © Copyright</center>
+    <footer>
+        <center> 2018 © Copyright</center>
 </footer>
 </body>
