--- a/html.html
+++ b/html.html
@@ -40,7 +40,7 @@
 
     <div class="box_2">
            <div>
-               <img src="Cloud.png" alt="облачно"></br>
+               <img src="pics/Cloud.png" alt="облачно"></br>
                 <span>22℃</span>
            </div>
 
@@ -72,7 +72,7 @@
 
             <div class="forecast">
                 <p>ср</p>
-                <img src="Cloud.png" alt="облачно"></br>
+                <img src="pics/Cloud.png" alt="облачно"></br>
                 <span>22° 13°</span>
             </div>
         </div>
@@ -83,7 +83,7 @@
 
             <div class="forecast">
                 <p>чт</p>
-                <img src="rainy.png" alt="небольшой дождь"></br>
+                <img src="pics/rainy.png" alt="небольшой дождь"></br>
                 <span>21° 11°</span>
             </div>
         </div>
@@ -94,7 +94,7 @@
 
             <div class="forecast">
                 <p>пт</p>
-                <img src="cloudy.png" alt="небольшая облачность"></br>
+                <img src="pics/cloudy.png" alt="небольшая облачность"></br>
                 <span>24° 12°</span>
             </div>
         </div>
@@ -105,7 +105,7 @@
 
             <div class="forecast">
                 <p>сб</p>
-                <img src="rain.png" alt="дождь"></br>
+                <img src="pics/rain.png" alt="дождь"></br>
                 <span>26° 13°</span>
             </div>
         </div>
@@ -116,7 +116,7 @@
 
             <div class="forecast">
                 <p>вс</p>
-                <img src="cloudy.png" alt="небольшая облачность"></br>
+                <img src="pics/cloudy.png" alt="небольшая облачность"></br>
                 <span>27° 14°</span>
             </div>
         </div>
@@ -127,7 +127,7 @@
 
             <div class="forecast">
                 <p>пн</p>
-                <img src="cloudy.png" alt="небольшая облачность"></br>
+                <img src="pics/cloudy.png" alt="небольшая облачность"></br>
                 <span>28° 14°</span>
             </div>
         </div>
@@ -138,7 +138,7 @@
 
             <div class="forecast">
                 <p>вт</p>
-                <img src="rain.png" alt="дождь"></br>
+                <img src="pics/rain.png" alt="дождь"></br>
                 <span>28° 14°</span>
             </div>
         </div>
@@ -149,7 +149,7 @@
 
             <div class="forecast">
                 <p>ср</p>
-                <img src="cloudy.png" alt="небольшая облачность"></br>
+                <img src="pics/cloudy.png" alt="небольшая облачность"></br>
                 <span>28° 14°</span>
             </div>
         </div>
