--- a/history.html
+++ b/history.html
@@ -13,7 +13,7 @@
         <a href="html5.html"><span class="tab">5 дней</span></a>
         <a href="history.html"><span class="tab">История погоды</span></a>
     </nav>
-    <header>
+    <header class="header">
         <div class='input_tab'>
             <div class='text'> Ижевск, Россия</div>
                 <div class='input'>
@@ -40,7 +40,7 @@
             </tr>
         </table>
     </main>
-    <footer>
+    <footer class="footer">
         <center> 2018 © Copyright</center>
 </footer>
 </body>
