--- a/html5.html
+++ b/html5.html
@@ -13,7 +13,7 @@
         <a href="html5.html"><span class="tab">5 дней</span></a>
         <a href="history.html"><span class="tab">История погоды</span></a>
     </nav>
-    <header>
+    <header class="header">
     	<img class ='header_img' src="pics/cloud.png" style='height: 30px; width: 40px;'>
     	<div class='text'>34' Ижевск, Россия</div>
     	<div class='input'>
@@ -62,7 +62,7 @@
 	<section class="foo inline-block"><div class='Sun inline-block'><img src="pics/Sun.png"><div>Долгота дня - 16ч 43мин</div><div>Восход - 4:02</div><div>Заход - 20:45</div></div><div class='Moon inline-block'><img src="pics/Moon.png"><div>Луна растущая - 19%</div><div>Восход - 7:40</div><div>Заход - 10:58</div></div><!---<div class='last_line'>Полнолуние - 28 июня, через 23 дня</div><div class='last_line'>Сегодня день на 2 минуты длиннее, чем вчера</div>--->
 	</section>
 </main>
-<footer>
+<footer class="footer">
 	<center> 2018 © Copyright</center>
 </footer>
 </body>
