--- a/new_weather.html
+++ b/new_weather.html
@@ -2,7 +2,10 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Weather</title>
+	<meta name="viewport"
+		  content="width=device-width, initial-scale=1.0"
+	>
+	<title>Weather</title>
     <link rel="stylesheet" href="new_weather.css">
 </head>
 
