--- a/html5.html
+++ b/html5.html
@@ -21,48 +21,167 @@
              </div>
     </header>
 <main>
-	<div class='a'>
-		<div class='b'></div>
-	</div>
-	<div class='table_container'>
-	<div class='table inline-block'>
-		<div class='week_days_row '>
-			<div class='week_days inline-block'>Пт, 18 мая</div>
-			<div class='week_days inline-block'>Сб, 19 мая</div>
-			<div class='week_days inline-block'>Вс, 20 мая</div>
-			<div class='week_days inline-block'>Пн, 21 мая</div>
-			<div class='week_days inline-block'>Вт, 22 мая</div>
-		</div>
-		<div class='weather_days_row inline-block'>
-			<div class='weather_days inline-block'><img src="pics/Cloudy Weather.png"><img src="pics/Sunny Weather.png"><img src="pics/Weather_5.png"><img src="pics/Weather_2.png"></div>
-			<div class='weather_days inline-block'><img src="pics/Cloudy Weather.png"><img src="pics/Sunny Weather.png"><img src="pics/Weather_2.png"><img src="pics/Weather_5.png"></div>
-			<div class='weather_days inline-block'><img src="pics/Cloudy Weather.png"><img src="pics/Weather_2.png"><img src="pics/Weather_5.png"><img src="pics/Sunny Weather.png"></div>
-			<div class='weather_days inline-block'><img src="pics/Cloudy Weather.png"><img src="pics/Sunny Weather.png"><img src="pics/Weather_5.png"><img src="pics/Weather_2.png"></div>
-			<div class='weather_days inline-block'><img src="pics/Cloudy Weather.png"><img src="pics/Sunny Weather.png"><img src="pics/Weather_5.png"><img src="pics/Weather_2.png"></div>
-		</div>
-		<div class='max_wind_speed'>Максимальная скорость ветра, м/с</div>
-		<div class='max_wind_speed_row inline-block'>
-			<div class='wind_info inline-block'><div class='transform'>2</div><div class='transform'>5</div><div class='transform'>4</div><div class='transform'>5</div></div>
-			<div class='wind_info inline-block'><div class='transform'>2</div><div class='transform'>5</div><div class='transform'>4</div><div class='transform'>5</div></div>
-			<div class='wind_info inline-block'><div class='transform'>2</div><div class='transform'>5</div><div class='transform'>4</div><div class='transform'>5</div></div>
-			<div class='wind_info inline-block'><div class='transform'>2</div><div class='transform'>5</div><div class='transform'>4</div><div class='transform'>5</div></div>
-			<div class='wind_info inline-block'><div class='transform'>2</div><div class='transform'>5</div><div class='transform'>4</div><div class='transform'>5</div></div>
-		</div>
-		<div class='precipitation'>Осадки, мм</div>
-			<div class='precipitation_info_row'>
-				<div class='precipitation_info'><div class='precipitation_info_block'>0</div><div class='precipitation_info_block'>0</div><div class='precipitation_info_block'><img src='pics/Group.png'></div><div class='precipitation_info_block'><img src='pics/Group_2.png'></div></div>
-				<div class='precipitation_info'><div class='precipitation_info_block'>0</div><div class='precipitation_info_block'>0</div><div class='precipitation_info_block'><img src='pics/Group_2.png'></div><div class='precipitation_info_block'><img src='pics/Group.png'></div></div>
-				<div class='precipitation_info'><div class='precipitation_info_block'>0</div><div class='precipitation_info_block'><img src='pics/Group_2.png'></div><div class='precipitation_info_block'><img src='pics/Group.png'></div><div class='precipitation_info_block'>0</div></div>
-				<div class='precipitation_info'><div class='precipitation_info_block'>0</div><div class='precipitation_info_block'>0</div><div class='precipitation_info_block'><img src='pics/Group.png'></div><div class='precipitation_info_block'><img src='pics/Group_2.png'></div></div>
-				<div class='precipitation_info'><div class='precipitation_info_block'>0</div><div class='precipitation_info_block'>0</div><div class='precipitation_info_block'><img src='pics/Group.png'></div><div class='precipitation_info_block'><img src='pics/Group_2.png'></div></div>
+	<div class='weather_table_container'>
+		<div class='weather_table'>
+			<div class="column_item">
+				<div class="column_item_date">Пт, 20 мая</div>
+				<div class="column_item_block">
+					<div class="weather_block"><span>Ночь</span><img src="pics/Cloudy Weather.png">
+						<div class="temp">+8</div>
+					</div>
+					<div class="weather_block"><span>Утро</span><img src="pics/Sunny Weather.png">
+						<div class="temp">+16</div>
+					</div>
+					<div class="weather_block"><span>День</span><img src="pics/Weather_5.png">
+						<div class="temp">+21</div>
+					</div>
+					<div class="weather_block"><span>Вечер</span><img src="pics/Weather_2.png">
+						<div class="temp">+17</div>
+					</div>
+				</div>
 			</div>
+			<div class="column_item">
+				<div class="column_item_date">Cб, 21 мая</div>
+				<div class="column_item_block">
+					<div class="weather_block"><span>Ночь</span><img src="pics/Cloudy Weather.png">
+						<div class="temp">+8</div>
+					</div>
+					<div class="weather_block"><span>Утро</span><img src="pics/Sunny Weather.png">
+						<div class="temp">+16</div>
+					</div>
+					<div class="weather_block"><span>День</span><img src="pics/Weather_2.png">
+						<div class="temp">+21</div>
+					</div>
+					<div class="weather_block"><span>Вечер</span><img src="pics/Weather_5.png">
+						<div class="temp">+17</div>
+					</div>
+				</div>
+			</div>
+			<div class="column_item">
+				<div class="column_item_date">Вс, 22 мая</div>
+				<div class="column_item_block">
+					<div class="weather_block"><span>Ночь</span><img src="pics/Cloudy Weather.png">
+						<div class="temp">+8</div>
+					</div>
+					<div class="weather_block"><span>Утро</span><img src="pics/Weather_2.png">
+						<div class="temp">+16</div>
+					</div>
+					<div class="weather_block"><span>День</span><img src="pics/Weather_5.png">
+						<div class="temp">+21</div>
+					</div>
+					<div class="weather_block"><span>Вечер</span><img src="pics/Sunny Weather.png">
+						<div class="temp">+17</div>
+					</div>
+				</div>
+			</div>
+			<div class="column_item">
+				<div class="column_item_date">Пн, 23 мая</div>
+				<div class="column_item_block">
+					<div class="weather_block"><span>Ночь</span><img src="pics/Cloudy Weather.png">
+						<div class="temp">+8</div>
+					</div>
+					<div class="weather_block"><span>Утро</span><img src="pics/Sunny Weather.png">
+						<div class="temp">+16</div>
+					</div>
+					<div class="weather_block"><span>День</span><img src="pics/Weather_5.png">
+						<div class="temp">+21</div>
+					</div>
+					<div class="weather_block"><span>Вечер</span><img src="pics/Weather_2.png">
+						<div class="temp">+17</div>
+					</div>
+				</div>
+			</div>
+			<div class="column_item">
+				<div class="column_item_date">Вт, 24 мая</div>
+				<div class="column_item_block">
+					<div class="weather_block"><span>Ночь</span><img src="pics/Cloudy Weather.png">
+						<div class="temp">+8</div>
+					</div>
+					<div class="weather_block"><span>Утро</span><img src="pics/Sunny Weather.png">
+						<div class="temp">+16</div>
+					</div>
+					<div class="weather_block"><span>День</span><img src="pics/Weather_5.png">
+						<div class="temp">+21</div>
+					</div>
+					<div class="weather_block"><span>Вечер</span><img src="pics/Weather_2.png">
+						<div class="temp">+17</div>
+					</div>
+				</div>
+			</div>
+			<div class="max_wind_speed_name">Максимальная скорость ветра, м/c</div>
+			<div class="max_wind_speed">
+				<div class="max_wind_speed_item">
+					<div class="max_wind_speed_info"><span class="transform">2</span></div>
+					<div class="max_wind_speed_info"><span class="transform">5</span></div>
+					<div class="max_wind_speed_info"><span class="transform">4</span></div>
+					<div class="max_wind_speed_info"><span class="transform">5</span></div>
+				</div>
+				<div class="max_wind_speed_item">
+					<div class="max_wind_speed_info"><span class="transform">2</span></div>
+					<div class="max_wind_speed_info"><span class="transform">5</span></div>
+					<div class="max_wind_speed_info"><span class="transform">4</span></div>
+					<div class="max_wind_speed_info"><span class="transform">5</span></div>
+				</div>
+				<div class="max_wind_speed_item">
+					<div class="max_wind_speed_info"><span class="transform">2</span></div>
+					<div class="max_wind_speed_info"><span class="transform">5</span></div>
+					<div class="max_wind_speed_info"><span class="transform">4</span></div>
+					<div class="max_wind_speed_info"><span class="transform">5</span></div>
+				</div>
+				<div class="max_wind_speed_item">
+					<div class="max_wind_speed_info"><span class="transform">2</span></div>
+					<div class="max_wind_speed_info"><span class="transform">5</span></div>
+					<div class="max_wind_speed_info"><span class="transform">4</span></div>
+					<div class="max_wind_speed_info"><span class="transform">5</span></div>
+				</div>
+				<div class="max_wind_speed_item">
+					<div class="max_wind_speed_info"><span class="transform">2</span></div>
+					<div class="max_wind_speed_info"><span class="transform">5</span></div>
+					<div class="max_wind_speed_info"><span class="transform">4</span></div>
+					<div class="max_wind_speed_info"><span class="transform">5</span></div>
+				</div>
+			</div>
+			<div class="precipitation_name">Осадки, мм</div>
+			<div class="precipitation">
+				<div class="precipitation_info">
+					<div class="precipitation_info_block">0</div>
+					<div class="precipitation_info_block">0</div>
+					<div class="precipitation_info_block">2.2<img src="Group.png"></div>
+					<div class="precipitation_info_block">4.6<img src="Group_2.png"></div>
+				</div>
+				<div class="precipitation_info">
+					<div class="precipitation_info_block">0</div>
+					<div class="precipitation_info_block">0</div>
+					<div class="precipitation_info_block">4.5<img src="Group_2.png"></div>
+					<div class="precipitation_info_block">2.2<img src="Group.png"></div>
+				</div>
+				<div class="precipitation_info">
+					<div class="precipitation_info_block">0</div>
+					<div class="precipitation_info_block">4.7</div>
+					<div class="precipitation_info_block">2.2<img src="Group.png"></div>
+					<div class="precipitation_info_block">0<img src="Group_2.png"></div>
+				</div>
+				<div class="precipitation_info">
+					<div class="precipitation_info_block">0</div>
+					<div class="precipitation_info_block">0</div>
+					<div class="precipitation_info_block">2.2<img src="Group.png"></div>
+					<div class="precipitation_info_block">4.6<img src="Group_2.png"></div>
+				</div>
+				<div class="precipitation_info">
+					<div class="precipitation_info_block">0</div>
+					<div class="precipitation_info_block">0</div>
+					<div class="precipitation_info_block">2.2<img src="Group.png"></div>
+					<div class="precipitation_info_block">4.6<img src="Group_2.png"></div>
+				</div>
+			</div>
+		</div>
 	</div>
-</div>
+
 	<section class='day_call'>Пятница, 18 мая, сегодня<div class='text_day_call inline-block'>Солнце и луна</div></section>
 	<section class="foo inline-block"><div class='Sun inline-block'><img src="pics/Sun.png"><div>Долгота дня - 16ч 43мин</div><div>Восход - 4:02</div><div>Заход - 20:45</div></div><div class='Moon inline-block'><img src="pics/Moon.png"><div>Луна растущая - 19%</div><div>Восход - 7:40</div><div>Заход - 10:58</div></div><!---<div class='last_line'>Полнолуние - 28 июня, через 23 дня</div><div class='last_line'>Сегодня день на 2 минуты длиннее, чем вчера</div>--->
 	</section>
 </main>
 <footer class="footer">
-	<center> 2018 © Copyright</center>
+	<div class="copyright"> 2018 © Copyright</div>
 </footer>
 </body>
