--- a/history.html
+++ b/history.html
@@ -17,7 +17,7 @@
         <div class='input_tab'>
             <div class='text'> Ижевск, Россия</div>
                 <div class='input'>
-                <input type="search" name="q" placeholder="Поиск"> 
+                <input type="search" name="q" placeholder="      Поиск">
              </div>
          </div>
     </header>
@@ -41,6 +41,6 @@
         </table>
     </main>
     <footer class="footer">
-        <center> 2018 © Copyright</center>
-</footer>
+        <div class="copyright"> 2018 © Copyright</div>
+    </footer>
 </body>
