--- a/html.html
+++ b/html.html
@@ -65,50 +65,48 @@
         </div>
         <div class='weather_row'>
             <div class='week_day_info'>
-                <div class='particles'>Today</div>
+                <div class='particles'>ср</div>
                 <div class='particles'><img src="thunder.png"></div>
-                <div class='particles'>68' 36'</div>
-                <div class='particles'>Pollen 36</div>
+                <div class='particles'>28° 14°</div>
             </div>
             <div class='week_day_info'>
-                <div class='particles'>Wednesday</div>
+                <div class='particles'>чт</div>
                 <div class='particles'><img src="sunny.png"></div>
-                <div class='particles'>50' 39'</div>
-                <div class='particles'>Pollen 36</div>
+                <div class='particles'>22° 13°</div>
             </div>
             <div class='week_day_info'>
-                <div class='particles'>Thursday</div>
+                <div class='particles'>пт</div>
                 <div class='particles'><img src="sunny.png"></div>
-                <div class='particles'>55' 39'</div>
-                <div class='particles'>Pollen 36</div>
+                <div class='particles'>21° 11°</div>
             </div>
             <div class='week_day_info'>
-                <div class='particles'>Friday</div>
+                <div class='particles'>сб</div>
                 <div class='particles'><img src="partly_cloudy.png"></div>
-                <div class='particles'>54' 43'</div>
-                <div class='particles'>Pollen 36</div>
+                <div class='particles'>24° 12°</div>
             </div>
             <div class='week_day_info'>
-                <div class='particles'>Saturday</div>
+                <div class='particles'>вс</div>
                 <div class='particles'><img src="Rainy_Day.png"></div>
-                <div class='particles'>64' 46'</div>
-                <div class='particles'>Pollen 36</div>
+                <div class='particles'>26° 13°</div>
             </div>
             <div class='week_day_info'>
-                <div class='particles'>Sunday</div>
+                <div class='particles'>пн</div>
                 <div class='particles'><img src="Rainy_Day.png"></div>
-                <div class='particles'>64' 50'</div>
-                <div class='particles'>Pollen 36</div>
+                <div class='particles'>28° 14°</div>
             </div>
             <div class='week_day_info'>
-                <div class='particles'>Monday</div>
+                <div class='particles'>вт</div>
                 <div class='particles'><img src="partly_cloudy.png"></div>
-                <div class='particles'>61' 50'</div>
-                <div class='particles'>Pollen 36</div>
+                <div class='particles'>28° 14°</div>
+            </div>
+            <div class='week_day_info'>
+                <div class='particles'>ср</div>
+                <div class='particles'><img src="partly_cloudy.png"></div>
+                <div class='particles'>28° 14°</div>
             </div>
         </div>        </main>
     <footer class="footer">
-       <center> 2018 © Copyright</center>
+       <div class="copyright"> 2018 © Copyright</div>
     </footer>
 
 </body>
