--- a/html5.html
+++ b/html5.html
@@ -2,6 +2,8 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+	<meta name="viewport"
+		  content="width=device-width, initial-scale=1.0">
     <title>Прогноз погоды на 5 дней</title>
     <link rel="stylesheet" href="css5.css">
 </head>
@@ -176,8 +178,7 @@
 			</div>
 		</div>
 	</div>
-
-	<section class='day_call'>Пятница, 18 мая, сегодня<div class='text_day_call inline-block'>Солнце и луна</div></section>
+	<section class='day_call'>Пятница, 18 мая, сегодня<div class='text_day_call'>Солнце и луна</div></section>
 	<section class="foo inline-block"><div class='Sun inline-block'><img src="pics/Sun.png"><div>Долгота дня - 16ч 43мин</div><div>Восход - 4:02</div><div>Заход - 20:45</div></div><div class='Moon inline-block'><img src="pics/Moon.png"><div>Луна растущая - 19%</div><div>Восход - 7:40</div><div>Заход - 10:58</div></div><!---<div class='last_line'>Полнолуние - 28 июня, через 23 дня</div><div class='last_line'>Сегодня день на 2 минуты длиннее, чем вчера</div>--->
 	</section>
 </main>
