--- a/html.html
+++ b/html.html
@@ -42,7 +42,7 @@
 
     <div class="box_2">
            <div>
-               <img src="pics/cloud.png" class="img" alt="облачно"><br>
+               <img src="pics/Cloudy Weather.png" class="img" alt="облачно"><br>
                 <span>22℃</span>
            </div>
 
