--- a/html5.html
+++ b/html5.html
@@ -16,7 +16,7 @@
         <a href="history.html"><span class="tab">История погоды</span></a>
     </nav>
     <header class="header">
-    	<img class ='header_img' src="pics/cloud.png" style='height: 30px; width: 40px;'>
+    	<img class ='header_img' src="pics/Cloudy Weather.png" style='height: 30px; width: 40px;'>
     	<div class='text'>34' Ижевск, Россия</div>
     	<div class='input'>
                 <input type="search" name="q" placeholder="      Поиск">
