--- a/precipitation.html
+++ b/precipitation.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <title>Прогноз погоды</title>
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="precipitation.css">
 </head>
 
 <body>
@@ -53,19 +53,52 @@
         </div>
     </div>
 </div>
-        <div class="graph_container">
-            <div class="graphic">
-                <div class="graph"><span>14</span><div class="graph_block"></div></div>
-                <div class="graph"><span>14</span><div class="graph_block"></div></div>
-                <div class="graph"><span>14</span><div class="graph_block"></div></div>
-                <div class="graph"><span>12</span><div class="graph_block"></div></div>
-                <div class="graph"><span>11</span><div class="graph_block"></div></div>
-                <div class="graph"><span>13</span><div class="graph_block"></div></div>
-                <div class="graph"><span>14</span><div class="graph_block"></div></div>
-                <div class="graph"><span>14</span><div class="graph_block"></div></div>
-            </div>
-        </div>
-        <div class='weather_row'>
+<section class="rainfall-expectancy">
+            <div class="rainfall-percentage-and-time">
+              <div class="rainfall-percentage">
+                <div class="rainfall-percentage__rainfall-level">
+                  <div class="rainfall-level-44"></div>
+                </div>
+                <div class="rainfall-percentage__rainfall-level">
+                  <div class="rainfall-level-23"></div>
+                  <div>24%</div>
+                </div>
+                <div class="rainfall-percentage__rainfall-level">
+                  <div class="rainfall-level-15"></div>
+                </div>
+                <div class="rainfall-percentage__rainfall-level">
+                  <div class="rainfall-level-23"></div>
+                </div>
+                <div class="rainfall-percentage__rainfall-level">
+                  <div class="rainfall-level-30"></div>
+                  <div>30%</div>
+                </div>
+                <div class="rainfall-percentage__rainfall-level">
+                  <div class="rainfall-level-38"></div>
+                </div>
+                <div class="rainfall-percentage__rainfall-level">
+                  <div class="rainfall-level-37"></div>
+                </div>
+                <div class="rainfall-percentage__rainfall-level">
+                  <div class="rainfall-level-23"></div>
+                  <div>24%</div>
+                </div>
+                <div class="rainfall-percentage__rainfall-level">
+                  <div class="rainfall-level-15"></div>
+                </div>
+                <div class="rainfall-percentage__rainfall-level">
+                  <div class="rainfall-level-11">
+                  </div>
+                </div>
+                <div class="rainfall-percentage__rainfall-level">
+                  <div class="rainfall-level-11"></div>
+                  <div>8%</div>
+                </div>
+                <div class="rainfall-percentage__rainfall-level">
+                  <div class="rainfall-level-15"></div>
+                </div>
+              </div>
+              <div class='weather_row'>
             <div class='week_day_info'>
                 <div class='particles'>ср</div>
                 <div class='particles'><img src="thunder.png"></div>
@@ -112,24 +145,4 @@
     </footer>
 
 </body>
-
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
