--- a/wind.html
+++ b/wind.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <title>Прогноз погоды</title>
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="wind.css">
 </head>
 
 <body>
@@ -45,27 +45,64 @@
                <img src="pics/Cloudy Weather.png" class="img" alt="облачно"><br>
                 <span>22℃</span>
            </div>
+    <section class="wind-and-time">
+                    <div class="value-and-arrows__wind-speed">
+                        <div class="wind-320-degrees">
+                            <img src="pics/Wind_arrow.png" width="40px" alt="ветер северо-восточный">
+                        </div>
+                        <div>7 м/с</div>
+                    </div>
 
-        <div>
-            <a href="html.html" class="temperature">Температура</a>
-            <a href="precipitation.html" class="rainfall">Вероятность осадков</a>
-            <a href="wind.html" class="wind">Ветер</a>
-        </div>
-    </div>
-</div>
-        <div class="graph_container">
-            <div class="graphic">
-                <div class="graph"><span>14</span><div class="graph_block"></div></div>
-                <div class="graph"><span>14</span><div class="graph_block"></div></div>
-                <div class="graph"><span>14</span><div class="graph_block"></div></div>
-                <div class="graph"><span>12</span><div class="graph_block"></div></div>
-                <div class="graph"><span>11</span><div class="graph_block"></div></div>
-                <div class="graph"><span>13</span><div class="graph_block"></div></div>
-                <div class="graph"><span>14</span><div class="graph_block"></div></div>
-                <div class="graph"><span>14</span><div class="graph_block"></div></div>
-            </div>
-        </div>
-        <div class='weather_row'>
+                    <div class="value-and-arrows__wind-speed">
+                        <div class="wind-320-degrees">
+                            <img src="pics/Wind_arrow.png" width="40px" alt="ветер северо-восточный">
+                        </div>
+                        <div>5 м/с</div>
+                    </div>
+
+                    <div class="value-and-arrows__wind-speed">
+                        <div class="wind-350-degrees">
+                            <img src="pics/Wind_arrow.png" width="40px" alt="ветер восточный">
+                        </div>
+                        <div>5 м/с</div>
+                    </div>
+
+                    <div class="value-and-arrows__wind-speed">
+                        <div class="wind-20-degrees">
+                            <img src="pics/Wind_arrow.png" width="40px" alt="ветер юго-восточный">
+                        </div>
+                        <div>5 м/с</div>
+                    </div>
+
+                
+            
+
+                    <div class="value-and-arrows__wind-speed">
+                        <div class="wind-20-degrees">
+                            <img src="pics/Wind_arrow.png" width="40px" alt="ветер юго-восточный">
+                        </div>
+                        <div>6 м/с</div>
+                    </div>
+                    <div class="value-and-arrows__wind-speed">
+                        <div class="wind-20-degrees">
+                            <img src="pics/Wind_arrow.png" width="40px" alt="ветер юго-восточный">
+                        </div>
+                        <div>6 м/с</div>
+                    </div>
+                    <div class="value-and-arrows__wind-speed">
+                        <div class="wind-20-degrees">
+                            <img src="pics/Wind_arrow.png" width="40px" alt="ветер юго-восточный">
+                        </div>
+                        <div>6 м/с</div>
+                    </div>
+                    <div class="value-and-arrows__wind-speed">
+                        <div class="wind-20-degrees">
+                            <img src="pics/Wind_arrow.png" width="40px" alt="ветер юго-восточный">
+                        </div>
+                        <div>5 м/с</div>
+                    </div>
+                </div>
+                <div class='weather_row'>
             <div class='week_day_info'>
                 <div class='particles'>ср</div>
                 <div class='particles'><img src="thunder.png"></div>
@@ -106,7 +143,8 @@
                 <div class='particles'><img src="partly_cloudy.png"></div>
                 <div class='particles'>28° 14°</div>
             </div>
-        </div>        </main>
+        </div>
+    </main>
     <footer class="footer">
        <div class="copyright"> 2018 © Copyright</div>
     </footer>
@@ -114,22 +152,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
