--- a/html5.html
+++ b/html5.html
@@ -23,6 +23,34 @@
              </div>
     </header>
 <main>
+		<div class="js_media">
+				<div class='arrow'><img src=""></div>
+				<div class='today_block'>
+					<div class='js_daycall'>Пт, 20 мая</div>
+					<div class="weather_today_block"><span>Ночь</span><img src="pics/Cloudy Weather.png">
+						<div class="temp">+8</div>
+					</div>
+					<div class="weather_today_block"><span>Утро</span><img src="pics/Sunny Weather.png">
+						<div class="temp">+16</div>
+					</div>
+					<div class="weather_today_block"><span>День</span><img src="pics/Weather_5.png">
+						<div class="temp">+21</div>
+					</div>
+					<div class="weather_today_block"><span>Вечер</span><img src="pics/Weather_2.png">
+						<div class="temp">+17</div>
+					</div>
+				</div>
+				<div class='arrow'><img src=""></div>
+			</div>
+		<div class='buttons_block'>
+			<div class='buttons'>
+				<div class='button'>пт</div>
+				<div class='button'>сб</div>
+				<div class='button'>вс</div>
+				<div class='button'>пн</div>
+				<div class='button'>вт</div>
+			</div>
+		</div>	
 	<div class='weather_table_container'>
 		<div class='weather_table'>
 			<div class="column_item">
@@ -186,3 +214,4 @@
 	<div class="copyright"> 2018 © Copyright</div>
 </footer>
 </body>
+<script src='/html5.js'></script>
